# KAI

./: .buildinfo  .gitignore  CITATION.cff  INSTALL.rst  MANIFEST.in  README.md  README.rst  environment_iraf27.yml  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: sphinx-to-github-pages.yml
_modules/: index.html  test_drizzle.html
_modules/kai/: _astropy_init.html  conditions.html  conftest.html  constants.html  instruments.html  photometry.html  plot.html  strehl.html
_modules/kai/mtf/: mmm.html  mtf.html
_modules/kai/reduce/: align_rms.html  analysis.html  bfixpix.html  calib.html  calibrate.html  correct_ipc.html  dar.html  data.html  kai_util.html  sky.html  (+7 more)
_sources/: index.rst.txt
_sources/reduce/: api.rst.txt
autoapi/: index.html
autoapi/kai/: index.html
autoapi/test_drizzle/: index.html
docs/: conf.py  index.rst  requirements.txt
docs/example_reduce/: make_log.py  reduce_clean.py  reduce_combo.py
docs/kai/: index.rst
kai/: TheAnalysisGuide.ipynb  TheReductionGuide.ipynb  __init__.py  _astropy_init.py  conditions.py  conftest.py  instruments.py  photometry.py  plot.py  strehl.py
kai/data/: README.rst  directory_aliases.txt
kai/mtf/: mmm.py  mtf.py
kai/reduce/: TheAnalysisGuide.ipynb  TheReductionGuide.ipynb  align.run  align_rms.py  analysis.py  bfixpix.py  calib.py  calibrate.py  correct_ipc.py  dar.py  data.py  kai_util.py  lin_correction.py  prep_analysis.py  reduce_template.py  reduce_template_osiris.py  sky.py  slalib.py  test_dar.py  util.py
kai/tests/: test_calibrate.py  test_photometry.py
licenses/: LICENSE.rst
reduce/: api.html
(+224 files in other folders)
