[metadata]
name = kai
author = J.R. Lu, A. Gautam, T. Do
author_email = jlu.astro@berkeley.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/Keck-DataReductionPipelines/KAI
description = KAI
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = Keck-DataReductionPipelines/KAI

[options]
zip_safe = False
packages = find:
python_requires = 2.7
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
kai = data/*

[tool:pytest]
testpaths = "kai" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    kai/_astropy_init*
    kai/conftest.py
    kai/*setup_package*
    kai/tests/*
    kai/*/tests/*
    kai/extern/*
    kai/version*
    */kai/_astropy_init*
    */kai/conftest.py
    */kai/*setup_package*
    */kai/tests/*
    */kai/*/tests/*
    */kai/extern/*
    */kai/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
